Opened 3 years ago

Closed 3 years ago

#17553 closed bug (fixed)

random freezes after condition_variable changes

Reported by: 3dEyes Owned by: waddlesplash
Priority: normal Milestone: R1/beta4
Component: System/Kernel Version: R1/Development
Keywords: condition_variable Cc:
Blocked By: Blocking:
Platform: x86-64

Description

After the December changes in condition_variable, various programs started to freezes randomly. About 10-15 freezes per day - one of the open windows simply stops refreshing (Tracker, Deskbar, Telegram, Pe and others). In rare cases, there is a complete system freeze. If I revert changes in condition_variables.h and condition_variables.cpp to 1728b8c7778d24e0daed7468f33dadf2f48c15ad commit, the problem disappears completely.

Change History (6)

comment:1 by 3dEyes, 3 years ago

Owner: changed from nobody to waddlesplash
Status: newassigned

comment:2 by waddlesplash, 3 years ago

Please retrieve a KDL backtrace of a few of the stuck threads (i.e. drop to KDL, run "bt" on a few threads, exit KDL, upload syslog.) I think nephele may have seen some similar symptoms though so maybe you are not the only one who has experienced this. Permanent hangs are very weird, that likely implies a defect in the thread blocking code...

comment:3 by waddlesplash, 3 years ago

comment:4 by 3dEyes, 3 years ago

I built haiku with this patch. I want to check for stability in work during the day

in reply to:  3 comment:5 by 3dEyes, 3 years ago

Replying to waddlesplash:

Possible patch: https://review.haiku-os.org/c/haiku/+/4890

Uptime is about 8 hours, no freezes. This patch seems to fix my problem.

comment:6 by waddlesplash, 3 years ago

Milestone: UnscheduledR1/beta4
Resolution: fixed
Status: assignedclosed

Merged (with some minor modifications to remove now-unneeded atomics) in hrev55841.

Note: See TracTickets for help on using tickets.