kernel/condition_variable: Borrow the scheduler lock instead of self-unblocking.

Self-unblocking is not done anywhere else in the kernel and may not be
such a bright idea, it seems.

This MAY help with #17553.
TODO: More testing.
TODO: Benchmark.